beautiful docs for registration api
