# src/main/java/com/mytiki/l0_storage/features/latest/api_id/ApiIdController.java
@@ -6,12 +6,13 @@
 package com.mytiki.l0_storage.features.latest.api_id;
 
 import com.mytiki.spring_rest_api.ApiConstants;
-import com.mytiki.spring_rest_api.reply.ApiReplyAO;
-import com.mytiki.spring_rest_api.reply.ApiReplyAOFactory;
+import com.mytiki.spring_rest_api.ApiPage;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-
+@Tag(name = "API Id")
 @RestController
 @RequestMapping(value = ApiIdController.PATH_CONTROLLER)
 public class ApiIdController {
@@ -24,25 +25,31 @@ public class ApiIdController {
         this.service = service;
     }
 
+    @Operation(summary = "Get all provisioned API Ids")
     @RequestMapping(method = RequestMethod.GET)
-    public ApiReplyAO<List<ApiIdAORsp>> getAll(
+    public ApiPage<ApiIdAORsp> getAll(
             @RequestParam(required = false, defaultValue = "0") int page,
             @RequestParam(required = false, defaultValue = "100") int size) {
         return service.all("test", page, size);
     }
 
+    @Operation(summary = "Get an API Id's properties")
+    @ResponseStatus(code = HttpStatus.NOT_FOUND)
     @RequestMapping(method = RequestMethod.GET, path = PATH_KEY + "/{api-id}")
-    public ApiReplyAO<ApiIdAORsp> getKey(@PathVariable(name = "api-id") String apiId){
-        return ApiReplyAOFactory.ok(service.find(apiId));
+    public ApiIdAORsp getKey(@PathVariable(name = "api-id") String apiId){
+        return service.find(apiId);
     }
 
+    @Operation(summary = "Revoke an API Id (permanent)")
+    @ResponseStatus(code = HttpStatus.NOT_FOUND)
     @RequestMapping(method = RequestMethod.DELETE, path = PATH_KEY + "/{api-id}")
-    public ApiReplyAO<ApiIdAORsp> deleteKey(@PathVariable(name = "api-id") String apiId){
-        return ApiReplyAOFactory.ok(service.revoke(apiId));
+    public ApiIdAORsp deleteKey(@PathVariable(name = "api-id") String apiId){
+        return service.revoke(apiId);
     }
 
+    @Operation(summary = "Request a new API Id")
     @RequestMapping(method = RequestMethod.POST, path = PATH_NEW)
-    public ApiReplyAO<ApiIdAORsp> postNew(){
-        return ApiReplyAOFactory.ok(service.register("test"));
+    public ApiIdAORsp postNew(){
+        return service.register("test");
     }
 }
