# src/main/java/com/mytiki/l0_storage/utilities/HealthCheckController.java
@@ -6,18 +6,33 @@
 package com.mytiki.l0_storage.utilities;
 
 import com.mytiki.spring_rest_api.ApiConstants;
-import com.mytiki.spring_rest_api.reply.ApiReplyAO;
-import com.mytiki.spring_rest_api.reply.ApiReplyAOFactory;
+import com.mytiki.spring_rest_api.ApiError;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
+@Tag(name = "Health")
 @RestController
 @RequestMapping(value = ApiConstants.HEALTH_ROUTE)
 public class HealthCheckController {
 
+    @ApiResponse(
+            responseCode = "200",
+            content = @Content(
+                    mediaType = MediaType.APPLICATION_JSON_VALUE,
+                    schema = @Schema(implementation = ApiError.class),
+                    examples = @ExampleObject(value = "{\"message\":\"OK\"}")
+            ))
     @RequestMapping(method = RequestMethod.GET)
-    public ApiReplyAO<?> get(){
-        return ApiReplyAOFactory.ok();
+    public ApiError get(){
+        ApiError rsp = new ApiError();
+        rsp.setMessage("OK");
+        return rsp;
     }
 }
